[tool.poetry]
name = "recommender-system"
version = "0.1.0"
description = ""
authors = ["daehwan <dodoman111@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
tensorflow = "2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
